--- a/HTML modulo 2/exercicio01/cor01.html
+++ b/HTML modulo 2/exercicio01/cor01.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cores em CSS</title>
+    <title>site de exemplo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Exemplos de cores</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit reiciendis debitis, laboriosam beatae voluptatum eveniet voluptatibus iste praesentium corrupti accusantium ipsum fuga voluptatem natus quos consequuntur placeat nulla et ipsa?</p>
-
-    <h2>Exemplos de cores</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit reiciendis debitis, laboriosam beatae voluptatum eveniet voluptatibus iste praesentium corrupti accusantium ipsum fuga voluptatem natus quos consequuntur placeat nulla et ipsa?</p>
-
-    <h2>Exemplos de cores</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit reiciendis debitis, laboriosam beatae voluptatum eveniet voluptatibus iste praesentium corrupti accusantium ipsum fuga voluptatem natus quos consequuntur placeat nulla et ipsa?</p>
+    <main>
+        <h1>Site de exemplo</h1>
+        <h2>Titulo 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et maiores explicabo, cum aliquam nesciunt asperiores possimus provident, perspiciatis dolore nostrum eius sed est excepturi sit similique hic! In, eos consectetur.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui eos magni quo minima? Maiores aliquam omnis iusto alias, voluptas quod adipisci quae ab, nostrum deleniti, nemo reiciendis officia ratione porro.</p>
+        <h2>Texto 2</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus iste nemo tempora neque culpa a placeat quam dolorem, impedit nesciunt quas eaque sit eveniet molestiae deleniti delectus odio, temporibus ut!</p>
+        
+    </main>
 </body>
 </html>
