--- a/HTML modulo 2/exercicio06/pseudo.html
+++ b/HTML modulo 2/exercicio06/pseudo.html
@@ -23,6 +23,9 @@
             display: block;
             color: rgb(50, 50, 92);
         }
+        div:active{
+            background-color: blue;
+        }
     </style>
 </head>
 <body>
