--- a/HTML modulo 2/exercicio08 caixas/caixa02.html
+++ b/HTML modulo 2/exercicio08 caixas/caixa02.html
@@ -19,6 +19,7 @@
             background-color: rgb(115, 158, 238);
             padding: 5px;
             text-align: right;
+            box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.527);
         }
         nav > a{
             text-decoration: none;
@@ -48,8 +49,11 @@
             background-color: black;
             color: white;
             text-align: center;
-            padding: 1px;
+            padding: 5px;
             margin: 0px;
+        }
+        footer > p{
+            margin: 0;
         }
     </style>
 </head>
