--- a/HTML modulo 2/exercicio08 caixas/caixa02.html
+++ b/HTML modulo 2/exercicio08 caixas/caixa02.html
@@ -35,10 +35,22 @@
             background-color: white;
             padding: 10px;
             margin: 10px;
+            border-top-left-radius: 100px;
+            border-top-right-radius: 100px;
+            border-bottom-left-radius: 100px;
+            border-bottom-right-radius: 0px;
+            
+        }
+        section{
+            text-align: center;
+            padding: 10px;
         }
         article{
-            background-color: rgba(128, 124, 124, 0.384);
+            width: 550px;
+            background-color: rgba(80, 106, 224, 0.089);
             padding: 5px;
+            margin: auto;
+            border-radius: 10px;
         }
         
         article > aside{
