--- a/HTML modulo 2/exercicio08 caixas/exercicio/index.html
+++ b/HTML modulo 2/exercicio08 caixas/exercicio/index.html
@@ -38,11 +38,17 @@
 
     <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável</p>.
 
-    
+    <picture>
+        <img src="midias/irina-blok.jpg" alt="Russa Irina Blok">
+    </picture>
 
     <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
 
-    [FOTO]
+    <div class="alinha">
+        <picture>
+            <img src="midias/bugdroid.png" alt="bugdroid">
+        </picture>
+    </div>
 
     <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
