nova aula completa

--- a/HTML-modulo-3/exercicio01/fundo06.html
+++ b/HTML-modulo-3/exercicio01/fundo06.html
@@ -12,10 +12,15 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover; /*contain -> 100% da imagem*/
+            background-attachment: fixed; /*scroll -> rolamento fixed -> rolamento com imagem parada*/
+
+            /*Shorthand background
+            color > image > position > repeat > [size] > attachment
+            */
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border-radius: 15px;
@@ -25,6 +30,12 @@
 <body>
     <main>
         <h1>Teste de imagem</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolore laborum autem harum consequuntur aliquid sequi. Velit quam ex, praesentium, accusamus earum corrupti magnam perspiciatis, vitae ipsam repellendus enim iure?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi at harum dolorum in delectus, error esse similique obcaecati, eveniet dolore dolores deleniti unde vitae tenetur! Dignissimos itaque molestiae pariatur atque!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolore laborum autem harum consequuntur aliquid sequi. Velit quam ex, praesentium, accusamus earum corrupti magnam perspiciatis, vitae ipsam repellendus enim iure?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi at harum dolorum in delectus, error esse similique obcaecati, eveniet dolore dolores deleniti unde vitae tenetur! Dignissimos itaque molestiae pariatur atque!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolore laborum autem harum consequuntur aliquid sequi. Velit quam ex, praesentium, accusamus earum corrupti magnam perspiciatis, vitae ipsam repellendus enim iure?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi at harum dolorum in delectus, error esse similique obcaecati, eveniet dolore dolores deleniti unde vitae tenetur! Dignissimos itaque molestiae pariatur atque!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus dolore laborum autem harum consequuntur aliquid sequi. Velit quam ex, praesentium, accusamus earum corrupti magnam perspiciatis, vitae ipsam repellendus enim iure?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi at harum dolorum in delectus, error esse similique obcaecati, eveniet dolore dolores deleniti unde vitae tenetur! Dignissimos itaque molestiae pariatur atque!</p>
     </main>
