--- a/HTML-modulo-3/exercicio01/fundo06.html
+++ b/HTML-modulo-3/exercicio01/fundo06.html
@@ -12,7 +12,7 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover; /*contain -> 100% da imagem*/
-            background-attachment: fixed; /*scroll -> rolamento fixed -> rolamento com imagem parada*/
+            background-attachment: fixed; /*scroll -> rolamento/ fixed -> rolamento com imagem parada*/
 
             /*Shorthand background
             color > image > position > repeat > [size] > attachment
