--- a/HTML-modulo-3/tabelas/tabela02.html
+++ b/HTML-modulo-3/tabelas/tabela02.html
@@ -12,6 +12,12 @@
             width: 500px;
             border-collapse: collapse;
         }
+        caption{
+            background-color: gray;
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+        }
         td, th{
             border: 1px solid black;
             padding: 10px;
@@ -27,7 +33,8 @@
 </head>
 <body>
     <h1>Tabelas grandes</h1>
-    <!-- Anatomia para tabelas grandes 
+    <!-- Anatomia para tabelas grandes
+      CAPTION
       HEAD
         TR, TD,TH
       TBODY
@@ -36,6 +43,7 @@
         TR,TD,TH
     -->
     <table>
+        <caption>População brasileira</caption>
         <thead>
             <tr>
                 <th>Estado</th>
