--- a/HTML-modulo-3/tabelas/tabela04.html
+++ b/HTML-modulo-3/tabelas/tabela04.html
@@ -16,7 +16,7 @@
             font-size: 1.3em;
         }
         thead{
-            background-color: rgba(52, 88, 206, 0.555);
+            background-color: rgba(77, 110, 219, 0.555);
             color: white;
             font-weight: bold;
             height: 50px;
@@ -38,12 +38,12 @@
                 <tr>
                     <th scope="col">Grupo</th>
                     <th scope="col">Nomes</th>
-                    <th scope="col" colspan="3">Filmes</th>
+                    <th scope="colgroup" colspan="3">Filmes</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <th rowspan="4">Mulheres</th>
+                    <th scope="rowgroup" rowspan="4">Mulheres</th>
                 </tr>
                 <tr>
                     <td>Maria</td>
@@ -64,7 +64,7 @@
                     <td>Croods</td>
                 </tr>
                 <tr>
-                    <th rowspan="4">Homens</th>
+                    <th scope="rowgroup" rowspan="4">Homens</th>
                 </tr>
                 <tr>
                     <td>Carlos</td>
