--- a/HTML-modulo-3/tabelas/tabela05.html
+++ b/HTML-modulo-3/tabelas/tabela05.html
@@ -28,6 +28,9 @@
             border: 1px solid black;
             text-align: center;
         }
+        .diciplinas{
+            background-color: bisque;
+        }
     </style>
 </head>
 <body>
@@ -36,6 +39,9 @@
     </header>
     <main>
         <table>
+            <colgroup>
+                <col class='diciplinas'>
+            </colgroup>
             <caption>Calculos de médias</caption>
             <thead>
                 <tr>
