--- a/HTML-modulo-4/iframe/ex01.html
+++ b/HTML-modulo-4/iframe/ex01.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criando iframe</title>
+    <style>
+        iframe{
+            width: 400px;
+            height: 400px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando uso de um iframe</h1>
-    <p>Acessando site do 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0">
+    <p>Acessando site do
+        <!--Tamanho padrao é de 300x350-->
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" scrolling="no">
 
         </iframe>
         curso em video para ver iframe
-    
+    </p>
+    <p>
+        O repositorio do
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="550" width="600"><a href="https://gustavoguanabara.github.io">guanabara</a></iframe>
+        tambem é legal
     </p>
 </body>
 </html>
