--- a/HTML-modulo-4/iframe/ex02.html
+++ b/HTML-modulo-4/iframe/ex02.html
@@ -18,7 +18,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam soluta at odio voluptatem molestiae minima natus ipsam, expedita harum porro repellat earum sit? Maiores officia cumque vel dicta autem adipisci.</p>
 
-    <iframe src="pagina01.html" frameborder="0"></iframe>
+    <iframe src="paginas/pagina01.html" frameborder="0">
+        Navegador não compativel
+    </iframe>
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium iste doloremque cum molestiae error nihil quidem, voluptates vitae rem totam autem amet dolorem, debitis eos qui culpa deleniti maxime ut.</p>
 
