--- a/HTML-modulo-4/iframe/iframe03.html
+++ b/HTML-modulo-4/iframe/iframe03.html
@@ -11,7 +11,7 @@
         }
         iframe{
             width: 96vw;
-            height: 350px;
+            height: 360px;
             border: 2px solid black;
 
         }
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum soluta nesciunt, aperiam neque quo laborum. Accusantium quas odit aliquid provident, deserunt officiis aliquam porro laboriosam et veritatis animi! Eligendi, est.</p>
 
-    <iframe src="" name="frame">Navegador não compativel</iframe>
+    <iframe srcdoc="<h1>escolha uma das opções acima</h1><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore numquam debitis quibusdam dolores veritatis nihil doloremque architecto accusantium, vero neque maiores quis. Officia animi aliquid omnis facere et quas minima.</p><img src='imagens/study.jpg'>" name="frame">Navegador não compativel</iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam fugiat voluptates consequuntur voluptatibus iste hic magni tempore a dolores, reiciendis harum deserunt quas beatae qui, non repellat, eaque dolore quia?</p>
 </body>
