--- a/HTML-modulo-4/iframe/iframe04.html
+++ b/HTML-modulo-4/iframe/iframe04.html
@@ -8,9 +8,10 @@
 <body>
     <h1>Meu site principal</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae hic at, necessitatibus doloribus molestiae quia placeat pariatur dignissimos incidunt iste sint repellat? At laborum numquam veniam? Eum fugit sapiente architecto?</p>
-    <iframe src="paginas/pagina04.html" frameborder="0" sandbox="allow-same-origin allow-forms" referrerpolicy="no-referrer">
+    <iframe src="paginas/pagina04.html" frameborder="0" sandbox="allow-same-origin allow-forms allow-scripts" referrerpolicy="no-referrer">
         NAVEGADOR NÃO COMPATIVEL
     </iframe>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo delectus illo harum, sint tempore aspernatur exercitationem quibusdam reiciendis aut? Exercitationem culpa voluptas sunt ratione ex dolore nemo ad earum iste.</p>
+    <iframe src="paginas/pagina05.html" frameborder="0" referrerpolicy="no-referrer" sandbox="sandbox">NÃO COMPATIVEL</iframe>
 </body>
 </html>
