--- a/HTML-modulo-4/formularios/form01.html
+++ b/HTML-modulo-4/formularios/form01.html
@@ -12,9 +12,11 @@
 </head>
 <body>
     <h1>Primeiro formulario</h1>
-    <form action="">
-        <p>Nome: <input type="text" name="nome" id="nome"></p>
-        <p>Sobrenome <input type="text" name="sobre" id="sobre"></p>
+    <form action="cadastro.php" autocomplete="off">
+        <p><label for="inome">Nome:</label> 
+            <input type="text" name="nome" id="inome"></p>
+        <p><label for="isobre">Sobrenome:</label> 
+            <input type="text" name="sobre" id="isobre"></p>
         <p><input type="submit" value="Enviar"></p>
     </form>
 </body>
