--- a/HTML-modulo-4/formularios/form02.html
+++ b/HTML-modulo-4/formularios/form02.html
@@ -7,18 +7,18 @@
 </head>
 <body>
     <h1>Teste de formularios</h1>
-    <form action="cadastro.php" method="get">
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="iusu">Usuario: </label>
-            <input type="text" name="usu"  id="iusu">
+            <input type="text" name="usu"  id="iusu" required minlength="5" maxlength="30" placeholder="Nome de Usuario" autocomplete="username">
         </p>
         <p>
             <label for="ipass">Senha: </label>
-            <input type="password" name="pass" id="ipass">
+            <input type="password" name="pass" id="ipass" required minlength="8" maxlength="20" size="10">
         </p>
         <p>
             <input type="submit" value="Enviar">
-            input
+            <input type="reset" value="Limpar">
         </p>
     </form>
 </body>
