--- a/HTML-modulo-1/html_css/exercicio 5 citacao/index.html
+++ b/HTML-modulo-1/html_css/exercicio 5 citacao/index.html
@@ -23,9 +23,9 @@
     <h2>Citações</h2>
     <p>Como diria o pai de um amigo: <q>O computador é um burro muito rapido</q></p>
     <h2>Citações completas</h2>
-    <p>Segundo Jeff Noball, no livre leigos em programação</p>
+    <p>Segundo Jeff Noball, no livro leigos em programação</p>
     <blockquote>
-        HTML não é linguagem de programçao
+        HTML não é linguagem de programaçao
         e sim uma liguagem de texto
     </blockquote>
 
