--- a/HTML-modulo-4/Media_Queries/MQ05/index.html
+++ b/HTML-modulo-4/Media_Queries/MQ05/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
 
-        <menu>
+        <i id="burguer" class="material-symbols-outlined" onclick="show()">menu</i>
+        <menu id="menu">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -30,5 +32,16 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus, consequuntur consequatur error alias ipsum voluptatibus est ratione maiores, sapiente dolorem porro? Illum iusto optio animi ipsam architecto laborum, saepe quo?</p>
         </article>
     </main>
+
+    <script>
+        function show(){
+            if (menu.style.display === "none"){
+                menu.style.display = 'block'
+            }
+            else{
+                menu.style.display = 'none'
+            }
+        }
+    </script>
 </body>
 </html>
