--- a/HTML-modulo-4/Media_Queries/MQ05/index.html
+++ b/HTML-modulo-4/Media_Queries/MQ05/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/screens.css">
 </head>
-<body>
+<body onresize="mudou()">
     <header>
         <h1>Meu Site</h1>
 
@@ -36,6 +37,15 @@
     <script>
         function show(){
             if (menu.style.display === "none"){
+                menu.style.display = 'block'
+            }
+            else{
+                menu.style.display = 'none'
+            }
+        }
+
+        const mudou = () =>{
+            if(window.innerWidth >= 768){
                 menu.style.display = 'block'
             }
             else{
